<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insert_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertBookActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextReturnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Return Date"
            android:hint="@string/return_date"
            android:focusable="false"
            android:clickable="true"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
            app:layout_constraintEnd_toStartOf="@id/buttonSave"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="8dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
            app:layout_constraintStart_toEndOf="@id/buttonCancel"
            android:layout_marginStart="8dp"
            android:padding="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
